# SO_Proyecto2

./: CMakeLists.txt  LICENSE  README.md  imgui.ini  main.py  makefile
src/: algorithm.cpp  main.cpp
src/algorithms/: optimal.h
src/computer/: Computer.h  Instruction.h  Instructions.h  MMU.h  Page.h  Process.h  mmu.h  page.h
src/data_structures/: ArrayList.h  DLinkedList.h  DNode.h  Dictionary.h  HashTable.h  KVPair.h  List.h
